force-app/main/default/objects/Pedido_de_muestras__c/Pedido_de_muestras__c.object-meta.xml
<CustomObject>
    <label>Pedido de muestras</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nro registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos de muestras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>