force-app/main/default/objects/Pedido_de_muestras__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos de muestras</relationshipLabel>
    <relationshipName>Pedidos_de_muestras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>