force-app/main/default/objects/Pedido_de_muestras__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <label>Importe total</label>
    <summarizedField>Producto_Muestra__c.Precio_Items__c</summarizedField>
    <summaryForeignKey>Producto_Muestra__c.Pedido_de_muestras__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>