force-app/main/default/objects/Pedido_de_muestras__c/fields/Propietario_del_registro__c.field-meta.xml
<CustomField>
    <fullName>Propietario_del_registro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos_de_muestras</relationshipName>
    <type>Lookup</type>
</CustomField>