force-app/main/default/objects/Pedido_de_muestras__c/fields/sucursal__c.field-meta.xml
<CustomField>
    <fullName>sucursal__c</fullName>
    <formula>Text(Cliente__r.Sucursal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sucursal</label>
    <type>Text</type>
</CustomField>