force-app/main/default/objects/Pedido_de_muestras__c/listViews/Muestras_Aprobaciones_Pendientes.listView-meta.xml
<ListView>
    <fullName>Muestras_Aprobaciones_Pendientes</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Propietario_del_registro__c</columns>
    <columns>Estado__c</columns>
    <columns>Importe_total__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Muestras - Aprobaciones Pendientes</label>
</ListView>